# myapp-textsuite

./: .env.default  Procfile  README.md  ReadMe.md  app.json  config.py  main.py  pyproject.toml  requirements.txt  runtime.txt  test.html  test.py  wsgi.py
app/: config.py  main.py  scripts.py  server.py  wsgi.py
app/secrets/: secret.py  secrets.json
app/static/css/: bootstrap.min.css.map  custom-styles.css
app/static/js/: custom-scripts.js
app/templates/: base.html  extract-home.html  extract-output.html  extract-result.html  extract-source-image-upload.html  extract-source-image-url.html  extract-source-webcam-capture.html  extract-source.html  main-home.html  navbar.html  query-home.html  query-input.html  query-output.html  translate-home.html  translate-input.html  translate-output.html
secret/: api_key.json  googlecloud_secret.json  ocrapi_secret.json  service_account.json  wolframalpha_secret.json
static/css/: custom-styles.css
static/js/: custom-scripts.js  f.txt  npm.js  responsivevoice.min.js
templates/: base.html  extract-home.html  extract-result.html  extract-source-02.html  extract-source-image-upload.html  extract-source-image-url.html  extract-source-webcam-capture.html  extract-source.html  home.html  imagescr00.html  imagescr01.html  imagescr02.html  main-home.html  main.html  ocr.html  query-home.html  query-input.html  query-output.html  source.html  translate-home.html  translate-input.html  translate-output.html  translate.html  translation.html
textsuite/: .env.default  __init__.py  config.py  extensions.py  routes.py  server.py  views.py
textsuite/static/css/: custom-styles.css
textsuite/static/js/: custom-scripts.js
textsuite/templates/: 400.html  404.html  500.html  base.html  extract-home.html  extract-output.html  extract-result.html  extract-source-image-upload.html  extract-source-image-url.html  extract-source-webcam-capture.html  extract-source.html  hidden.html  main-home.html  navbar.html  query-home.html  query-input.html  query-output.html  translate-home.html  translate-input.html  translate-output.html
